# op-desktop-x-ai

./: .env.example  .gitignore  Index.html  README.md  index.html  pyproject.toml
config/: default.toml
src/desktop_agent/: __init__.py  __main__.py  config.py  log.py  task_logger.py  tts.py
src/desktop_agent/browser/: __init__.py  manager.py  research.py
src/desktop_agent/control/: __init__.py  app_manager.py  desktop.py  keyboard.py  mouse.py
src/desktop_agent/core/: __init__.py  actions.py  agent.py  executor.py  planner.py
src/desktop_agent/knowledge/: __init__.py  macos.py
src/desktop_agent/learning/: __init__.py  self_optimize.py
src/desktop_agent/memory/: __init__.py  long_term.py  short_term.py  skill_store.py
src/desktop_agent/perception/: __init__.py  accessibility.py  ocr.py  screen.py  screen_diff.py
src/desktop_agent/scheduling/: __init__.py  scheduler.py
src/desktop_agent/ui/: __init__.py  cli.py
src/desktop_agent/verification/: __init__.py  retry.py  verifier.py
